Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-71709

Invalid example in Qt Windows Extras Overview docs

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.12.1, 5.13.0 Alpha 1
    • 5.12.0 Beta 4
    • Extras: Win
    • None
    • 71a4a624fcdc2768d19619fa5a0bc583e2cc2a11 (qt/qtwinextras/5.12)

      The docs give an example for QWinJumpList that references non-existent functions (in fact none of the methods referenced actually exist on QWinJumpList).

      The snippet qtwinextras/src/winextras/doc/snippets/code/jumplist.cpp is invalid.

        For Gerrit Dashboard: QTBUG-71709
        # Subject Branch Project Status CR V

            kleint Friedemann Kleint
            asm Andy M
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes