Fix jumplist example documentation snippet

Update API.

Fixes: QTBUG-71709
Change-Id: I21d5a78a0a9c124308b2341a61cb1e12bf689a4a
Reviewed-by: Andre de la Rocha <andre.rocha@qt.io>
Reviewed-by: Oliver Wolff <oliver.wolff@qt.io>